<resources>
    <string name="app_name">Gargii</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_application_id" translatable="false">2542784245965305</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2542784245965305</string>


    <string name="library_name">DENEME</string>
    <string name="about_text">DENEME</string>
    <string name="web_client_id">496186787290-mcvg0h0c2m0568aa9tsvjf14gr2bd78v.apps.googleusercontent.com</string>
    <string name="giris_yap">Giriş Yap </string>
    <string name="hesap_olustur">Hesap Oluştur </string>
    <string name="e_mail_adresiniz">E-Posta Adresiniz </string>
    <string name="sifre">Şifreniz </string>
    <string name="sifremi_unuttum">Şifremi Unuttum , Şifremi Sıfırla </string>
    <string name="adiniz">Adınız </string>
    <string name="sifrenizi_tekrar_giriniz">Şifrenizi Tekrar Giriniz </string>
    <string name="yasiniz">Yaşınız </string>
    <string name="erkek">ERKEK </string>
    <string name="kadin">KADIN </string>
    <string name="ana_sayfa">Ana Sayfa </string>
    <string name="top_yuz">Top Yüz </string>
    <string name="sohbet">Sohbet </string>
    <string name="profil">Profil </string>
    <string name="anladim">ANLADIM </string>
    <string name="kendinden_bahset_bize">Kendinden Bahset Bize </string>
    <string name="okudugun_okul">Okuduğun Okul </string>
    <string name="belki_arkadaslarinla_karsilasirsin">Belki Arkadaşlarınla Karşılaşırsın </string>
    <string name="ne_is_yapiyorsun">Ne İş Yapıyorsun </string>
    <string name="bu_devirde_onemli_bir_kriter">Bu Devirde Önemli Bir Kriter </string>
    <string name="sosyal_medya_kullanici_adlarin">Sosyal Medya Kullanıcı Adların </string>
    <string name="belki_biri_hikayene_yanit_veriri">Belki Biri Hikayene Yanıt Verir </string>
    <string name="tekrar_oynatilabilen_snaplar_alirsin">Tekrar Oynatılabilen Snap\'lar Alırsın  </string>
    <string name="evet_hala_kullaniliyor">Evet Hala Kullanılıyor </string>
    <string name="karakter_hala_cok_az">280 Karakter Hala Çok Az </string>
    <string name="bu_eslemeyi_kaldir">Bu Eşleşmeyi Kaldır </string>
    <string name="bu_sohbeti_silerseniz_tekrar_eslesme_sansiniz_olabilir">Bu Sohbeti Silerseniz Tekrar Eşleşme Şansınız Olabilir </string>
    <string name="sorun_nedir">Sorun Nedir ? </string>
    <string name="gonder">GÖNDER </string>
    <string name="ayarlar">Ayarlar </string>
    <string name="mesajlar">MESAJLAR </string>
    <string name="yeni_bir_mesaj_var">Yeni Bir Mesaj Var </string>
    <string name="yeni_arkadas">YENİ ARKADAŞ </string>
    <string name="yeni_bir_eslesmen_var">Yeni Bir Eşleşmen Var </string>
    <string name="profilini_duzenle">Profilini Düzenle </string>
    <string name="goruntulenme">Görüntülenme </string>
    <string name="oy_verenler">Oy Verenler </string>
    <string name="kisi_goruntuledi">Kişi Görüntüledi </string>
    <string name="e_posta_ayarlari">E Posta Ayarları </string>
    <string name="onaylamak_icin_buraya_tiklayiniz">Onaylamak Buraya Tılayınız </string>
    <string name="sifre_ayarlari">Şifre Ayarları </string>
    <string name="sifremi_degistir">Şifremi Değiştir </string>
    <string name="bildirim_ayarlari">Bildirim Ayarları </string>
    <string name="anlik_bildirimler">Anlık Bildirimler </string>
    <string name="bize_ulas">Bize Ulaş </string>
    <string name="sorun_bildirin">Sorun Bildirin ! </string>
    <string name="bizi_degerlendirin">Bizi Değerlendirin </string>
    <string name="yasal">Yasal </string>
    <string name="lisanslar">Lisanslar </string>
    <string name="hizmet_kosullari">Hizmet Koşulları </string>
    <string name="hakkinda">Hakkında </string>
    <string name="cikis">ÇIKIŞ </string>
    <string name="sifrenizi_giriniz">Şifrenizi Giriniz </string>
    <string name="yeni_sifresinizi_giriniz">Yeni Şifrenizi Giriniz </string>
    <string name="yeni_sifrenizi_tekrar_giriniz">Yeni Şifrenizi Tekrar Giriniz </string>
    <string name="yeni_bir_mesaj_yaz">Yeni Bir Mesaj Yaz </string>
    <string name="degerlendir">Değerlendir </string>
    <string name="sosyal_medya_hesaplarim">Sosyal Medya Hesaplarım </string>
    <string name="sikayet_et">Şikayet Et </string>
    <string name="bu_sohbeti_bitirmek_istiyor_musunuz">Sohbeti Bitirmek İstiyor Musunuz? </string>
    <string name="evet">EVET </string>
    <string name="hayir">HAYIR </string>
    <string name="secenekler">ŞEÇENEKLER </string>
    <string name="eslesmeyi_kaldir">Eşleşmeyi Kaldır </string>
    <string name="vazgec">VAZGEÇ </string>
    <string name="aktif_sohbetler">Aktif Sohbetler </string>
    <string name="eski_sohbetler">Eski Sohbetler </string>
    <string name="lutfen_internet_baglantinizi_kontrol_edin">LÜTFEN İNTERNET BAĞLANTINIZI KONTROL EDİNİZ </string>
    <string name="onayla">Onayla </string>
    <string name="dk_sonra_eslesmeyi_kaldirabilirsiniz">Dk Sonra Eşlemeyi Kaldırabilirsiniz </string>
    <string name="sikayetiniz_degerlendirmeye_alinmisitir">Şikayetiniz Değerlendirmeye Alınmıştır </string>
    <string name="tamam">TAMAM </string>
    <string name="uygunsuz_ciplaklik">Uygunsuz-Çıplaklık </string>
    <string name="hakaret_ve_kufur">Hakaret ve Küfür </string>
    <string name="sahte_hesap">Sahte Hesap </string>
    <string name="diger">Diğer </string>
    <string name="sikayet_etme_nedenizi_seciniz">Şikayet Etme Nedenini Seçiniz </string>
    <string name="gunluk_eslesme_limitiniz_doldurdunuz">Günlük Eşleşme Limitinizi Doldurdunuz </string>
    <string name="saat_sonra_tekrar_eslebilirsiniz">Saat Sonra Tekrar Eşleşebilirsiniz </string>

    <string name="en_cok_puan_alan_kullanicilar">En Çok Puan Alan Kullanıcılar </string>
    <string name="rastgele_kullanici">Rastgele  Kullanıcı </string>
    <string name="en_pupuler_kullanicilar">En Popüler Kullanıcılar</string>
    <string name="konum_bilgisi_yok">Konum Bilgisi Yok</string>

    <string name="en_populer">En Popüler </string>
    <string name="top_yuzz">Top 100</string>
    <string name="karistir">Karıştır</string>
    <string name="sifreni_degistir">Şifreni Değiştir</string>
    <string name="lutfen_gecerli_bir_email_adresi_giriniz">Lütfen Geçerli Bir E-Posta Adresi Giriniz</string>
    <string name="lutfen_eposta_adresinizi_giriniz">Lutfen E-Posta Adresinizi Giriniz</string>
    <string name="lutfen_sifrenizi_giriniz">Lutfen Şifrenizi Giriniz</string>
    <string name="lutfen_bekleyiniz">Lütfen Bekleyiniz</string>
    <string name="giris_yapiliyor">Giriş Yapılıyor</string>
    <string name="eposta_yada_sifre_hatali">E-posta yada Şifre Hatalı</string>
    <string name="onsekiz_yasindan_buyuk_olmanız_gerekmeketedir">18 Yaşından Büyük Olmanız Gerekmeketedir</string>
    <string name="lutfen_adinizi_giriniz">Lütfen Adınızı Giriniz</string>
    <string name="lutfen_sifreinizi_belirleyin">Lütfen Şifrenizi Belirleyin</string>
    <string name="sifreler_ayni_degil">Şifreler Aynı Değil</string>
    <string name="lutfen_yasinizi_giriniz">Lütfen Yaşınızı Giriniz</string>
    <string name="lutfen_cinisinizyetiniz_giriniz">Lütfen Cinsiyetinizi Giriniz</string>
    <string name="bir_kac_dk_once">bir kaç dk önce</string>
    <string name="simdi">şimdi</string>
    <string name="dk_once">" "dk önce</string>
    <string name="bir_saat_once">1 saat önce</string>
    <string name="saat_once">" "saat önce</string>
    <string name="dun">" "dün</string>
    <string name="gun_once">" "gün önce</string>
    <string name="yeterince_eslesmen_var">Yeterince Eşleşmen Var</string>
    <string name="resim_yukleniyor">RESİM YUKLENİYOR</string>
    <string name="lutfen_bekleniyiz">Lütfen Bekleyiniz</string>
    <string name="nev">Yeni</string>


    <string name="eslebilecegin_kimse_yok">Malesef Eşleşebileceğin Kimse Yok</string>
    <string name="yeni_bir_eslesmen_var_">Yeni Bir Eşleşmen Var</string>
    <string name="devam_et">Devam Et</string>
    <string name="mesaj_gonder">Mesaj Yaz</string>
    <string name="kapat">Kapat</string>
    <string name="sana_yeni_bir_mesaj_gonderdi">Sent You a New Message</string>
    <string name="bir_beyefendi_size">Bir Beyefendi Size</string>
    <string name="puan_verdi">Puan Verdi</string>
    <string name="rate">Yeni Bir Oy Aldınız</string>
    <string name="bir_hanımefendi_size">Bir Hanımefendi Size</string>
    <string name="en_yakin">En Yakındakiler</string>
    <string name="bu_bilgilere_ihtiyacimiz_var">Bu Bilgilere İhtiyacımız Var</string>
    <string name="oy">Yeni Bir Oy</string>
    <string name="gizlikik_politikasi">Gizlilik Politikası</string>
    <string name="kullanici_sana_oy_verdi">Kullanıcı Size Oy Verdi</string>
    <string name="size">Size</string>
    <string name="bir_reklam_seyret">Bir Reklam Seyret</string>
    <string name="bir_tane_daha_eslesme">+1 Eşleme</string>
    <string name="kullanıcı_profilinizi_goruntuledi">Kullanıcı Profilinizi Görüntüledi</string>
    <string name="kere_profilini_goruntuledi">Kere Profilini Görüntüledi</string>
    <string name="guncelle">Güncelle</string>
    <string name="hayır_tsk">Hayır,Teşekürler</string>
    <string name="uygulamaniz_güncel_degil">Uygulamanız Güncel Değil</string>
    <string name="telefon_numarasi_ayarlari">Telefon Numarası Ayarları</string>
    <string name="yukleniyor">loading...</string>


</resources>
