<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Log_Sign.NewUserInfo">

    <TextView
        android:id="@+id/header"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/nunito_sans_semibold"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bu_bilgilere_ihtiyacimiz_var"
        ></TextView>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="@string/adiniz"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="14dp"
        android:layout_below="@id/header"
        app:met_floatingLabel="normal"
        app:met_floatingLabelTextColor="@color/colorPrimaryDark" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"

        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="@string/e_mail_adresiniz"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="14dp"
        app:met_floatingLabel="normal"
        app:met_floatingLabelTextColor="@color/colorPrimaryDark" />
    <RadioGroup
        android:layout_below="@id/email"
        android:layout_marginTop="8dp"
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_semibold"
            android:text="@string/erkek"
            android:textIsSelectable="true"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_semibold"
            android:text="@string/kadin"
            android:textIsSelectable="true"
            android:textSize="14dp" />
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yasiniz"
        android:id="@+id/age"
        android:layout_below="@+id/radio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:textSize="16sp"
        android:background="@drawable/button_back"
        android:textColor="@color/white"
        android:padding="4dp"
        ></Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devam_et"
        android:id="@+id/register_clik"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"

        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:textSize="16sp"
        android:background="@drawable/button_back"
        android:textColor="@color/white"
        android:padding="4dp"
        ></Button>
</RelativeLayout>