<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingEdit.setting_password">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.github.clans.fab.FloatingActionButton
            android:onClick="finish"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:fab_size="mini"
            android:id="@+id/back"
            app:fab_showShadow="true"
            app:fab_shadowColor="#66000000"
            app:fab_shadowRadius="4dp"
            app:fab_shadowXOffset="1dp"
            app:fab_shadowYOffset="3dp"
            app:fab_colorNormal="@color/white"
            android:src="@drawable/back"
            tools:ignore="OnClick" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:fontFamily="@font/nunito_sans_semibold"

            android:text="@string/sifreni_degistir"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_below="@id/toolbar"
        android:id="@+id/currentPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="30dp"
        android:hint="@string/sifrenizi_giriniz"
        android:textAlignment="center"
        android:fontFamily="@font/nunito_sans_semibold"
        android:textSize="16dp"
        android:inputType="textPassword"
        app:met_floatingLabel="normal"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_below="@id/currentPass"
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="30dp"
        android:hint="@string/yeni_sifresinizi_giriniz"
        android:textAlignment="center"
        android:fontFamily="@font/nunito_sans_semibold"
        android:textSize="16dp"
        android:inputType="textPassword"
        app:met_floatingLabel="normal"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_below="@id/newPassword"
        android:id="@+id/newPasswordAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="30dp"
        android:hint="@string/yeni_sifrenizi_tekrar_giriniz"
        android:textAlignment="center"
        android:fontFamily="@font/nunito_sans_semibold"
        android:textSize="16dp"
        android:inputType="textPassword"
        app:met_floatingLabel="normal"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/newPasswordAgain"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_back"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/sifremi_degistir"
        android:textSize="16sp"
        android:textColor="#fff"
        android:fontFamily="@font/nunito_sans_semibold"
        android:id="@+id/changePassword"
        />
</RelativeLayout>