<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_gravity="center"
    app:cardCornerRadius="20dp"
    android:elevation="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            android:text="@string/secenekler"
            android:fontFamily="@font/nunito_sans_semibold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            >

        </TextView>
        <LinearLayout
            android:layout_marginTop="4dp"
            android:id="@+id/linLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/removeMatch"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/nunito_sans_semibold"
                android:textSize="14sp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eslesmeyi_kaldir"
                ></TextView>

            <TextView
                android:id="@+id/report"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/nunito_sans_semibold"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sikayet_et"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                ></TextView>
        </LinearLayout>
        <Button
            android:layout_marginTop="8dp"
            android:layout_below="@id/linLay"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/cancel"
            android:text="@string/vazgec"
            android:background="@drawable/button_back"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_sans_semibold"

            ></Button>
    </RelativeLayout>
</androidx.cardview.widget.CardView>