<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Log_Sign.RegisterFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:fontFamily="@font/nunito_sans_semibold"
                android:hint="@string/adiniz"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="14dp"
                app:met_floatingLabel="normal"
                app:met_floatingLabelTextColor="@color/colorPrimaryDark" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"

                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:fontFamily="@font/nunito_sans_semibold"
                android:hint="@string/e_mail_adresiniz"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textSize="14dp"
                app:met_floatingLabel="normal"
                app:met_floatingLabelTextColor="@color/colorPrimaryDark" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"

                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:fontFamily="@font/nunito_sans_semibold"
                android:hint="@string/sifre"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="14dp"
                app:met_floatingLabel="normal"
                app:met_floatingLabelTextColor="@color/colorPrimaryDark" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/passwordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"

                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:fontFamily="@font/nunito_sans_semibold"
                android:hint="@string/sifrenizi_tekrar_giriniz"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="14dp"
                app:met_floatingLabel="normal"
                app:met_floatingLabelTextColor="@color/colorPrimaryDark" />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:id="@+id/age_et"
                android:visibility="invisible"

                ></com.rengwuxian.materialedittext.MaterialEditText>
            <Button
                android:background="@drawable/button_back"
                android:id="@+id/age"
                android:textColor="@color/white"
                android:layout_width="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dp"
                android:layout_height="40dp"
                android:layout_below="@id/passwordAgain"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:hint="@string/yasiniz"
                android:textAlignment="center"
                android:textSize="16dp" />

            <RadioGroup
                android:layout_marginTop="4dp"
                android:id="@+id/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/age"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"

                >

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:text="@string/erkek"
                    android:textIsSelectable="true"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:text="@string/kadin"
                    android:textIsSelectable="true"
                    android:textSize="14dp" />
            </RadioGroup>

            <Button
                android:id="@+id/register_clik"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/radio"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_back"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/hesap_olustur"
                android:textColor="#fff"
                android:textSize="14dp" />
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>