<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:elevation="4dp"
    app:cardCornerRadius="25dp"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/nunito_sans_semibold"
            android:textStyle="bold"
            android:id="@+id/leftTime"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:text="04:34"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:text="@string/dk_sonra_eslesmeyi_kaldirabilirsiniz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView

            android:background="?attr/selectableItemBackground"
            android:id="@+id/report"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:textColor="#ff0000"
            android:text="@string/sikayet_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <Button
            android:id="@+id/cancel"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:background="@drawable/button_back"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_sans_semibold"
            android:text="@string/vazgec"
            android:layout_height="wrap_content"></Button>
    </LinearLayout>
</RelativeLayout>
</androidx.cardview.widget.CardView>